# internet-speed-monitor

./: .gitignore  README.rst  internet_speed_monitor\speedtest.db  pyproject.toml  setup.cfg
internet_speed_monitor/: main.py  plots.py  scrap.py  speedtest.db
tests/: test_internet_speed_monitor.py
